--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -765,550 +765,37 @@ button.read_more_btn:hover {
 
 /* SUPPORT US SECTION STYLING */
 
-.main_support_us_wrapper {
-  margin: 0 auto;
-  padding: 50px 15%;
-}
-
-.ways_to_donate,
-.other_ways_to_donate {
-  display: block;
-  margin: auto;
-  position: relative;
-  z-index: 1;
-  border: 3px solid #528fec;
-  max-width: 913px;
-  max-height: 250px;
-}
-
-.other_ways_to_donate {
-  margin-top: 80px;
-  max-width: 610px;
-}
-
-h2.ways_to_donate_title,
-.ways_to_donate_title_volunteer {
-  margin: -25px 0 40px 0;
-  text-align: center;
-  font-family: 'Open Sans';
-  color: #528fec;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 41px;
-}
-
-.donate_title_wrapper {
-  /*wrapper around title to center title and block out border behind*/
-  display: block;
-  margin: 0 auto;
-  background-color: #fafaff;
-  max-width: 375px;
-}
-
-div.ways_to_donate_flex_container {
-  display: flex;
-  justify-content: space-evenly;
-  margin-left: 60px;
-  margin-bottom: -75px;
-  padding: 0;
-  width: fit-content;
-  background: #fafaff;
-}
-
-p.ways_to_donate_description {
-  font-family: 'Open Sans';
-  font-size: 18px;
-  line-height: 25px;
-  letter-spacing: 0px;
-  text-align: center;
-}
-
-a.support_us_link {
-  color: #528fec;
-}
-
-button.donate_btn {
-  outline: none;
-  font-family: 'Open Sans';
-  color: #fff;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: #2c2d41;
-  border: none;
-  border-radius: 100px;
-  padding: 16px 0 16px 0;
-  width: 175px;
-  text-transform: uppercase;
-}
-
-button.donate_btn:hover {
-  cursor: pointer;
-}
-
-.leave_page {
-  padding-left: 11px;
-}
-
-.donate_card,
-.amazon_smile_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #fff;
-  box-shadow: 0px 4px 20px 0px rgba(138, 138, 138, 0.15);
-  width: 375px;
-  border-radius: 20px;
-  z-index: 2;
-}
-.amazon_smile_container {
-  padding: 10px 5px;
-  height: 340px;
-}
-.donate_card {
-  padding: 30px 5px;
-  height: 220px;
-}
-
-.donate_on_facebook {
-  margin-right: 40px;
-}
-
-hr.ways_to_donate_break {
-  margin-top: 140px;
-  height: 2px;
-  background-color: rgba(82, 143, 236, 0.25);
-  border: none;
-}
-
-.cake_illustration {
-  padding-top: 20px;
-}
-
-.facebook_fundraiser_container,
-.amazon_smile_container {
-  flex: 1;
-  background-color: #fff;
-  box-shadow: 0px 4px 20px 0px rgba(138, 138, 138, 0.15);
-  width: 516px;
-  max-height: 335px;
-  border-radius: 20px;
-  z-index: 2;
-}
-
-.facebook_fundraiser_container {
-  margin-left: -290px;
-  margin-right: 40px;
-  padding: 0 10px 10px 0px;
-}
-
-.amazon_smile_container {
-  margin-right: -249px;
-  padding: 0 10px 10px 0px;
-}
-
-.other_ways_to_donate_description {
-  font-weight: 700;
-  font-size: 18px;
-  text-align: left;
-  padding-left: 50px;
-  margin-top: 0;
-}
-.other_instructions {
-  color: #528fec;
-  font-weight: 700;
-  text-align: left;
-  padding-left: 70px;
-  margin-bottom: 21px;
-}
-.li_instructions {
-  font-weight: normal;
-  color: black;
-  font-size: 16px;
-  line-height: 200%;
-}
-p.and_spacer {
-  display: block;
-  font-family: 'Open Sans';
-  color: #528fec;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: 600;
-  line-height: 25px;
-  text-align: center;
-  margin-top: 200px;
-  margin-bottom: 55px;
-}
-
-.through_employer_flex {
-  display: block;
-  margin: auto;
-  background-color: #fff;
-  box-shadow: 0px 4px 20px 0px rgba(138, 138, 138, 0.15);
-  max-height: 261px;
-  max-width: 736px;
-  border-radius: 20px;
-}
-.through_employer_icons {
-  display: flex;
-  justify-content: space-evenly;
-}
-.title {
-  font-size: 26px;
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-align: left;
-}
-
-.text_description,
-.supportSubtitle {
-  display: flex;
-  font-family: 'Open Sans';
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 25px;
-  text-align: left;
-}
-.text_description {
-  padding: 50px 0;
-}
-.supportSubtitle {
-  padding: 0 0 50px 0;
-}
-
-hr.other_ways_to_donate_break {
-  margin-top: 80px;
-  height: 2px;
-  background-color: rgba(82, 143, 236, 0.25);
-  border: none;
-}
-.giveButterSection {
-  position: relative;
-  height: 590px;
-  display: flex;
-  justify-content: flex-start;
-  img {
-    height: initial;
-    max-height: 588px;
-    border-radius: 8px;
+.text-data-custom {
+  > p {
+    // display: inline-block;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 38px;
+    line-height: 52px;
+    text-align: center;
+    letter-spacing: 1.07288e-6px;
+    background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    // text-fill-color: transparent;
+    margin: 0;
   }
 
-  .givebutterForm {
-    border: none;
-    position: absolute;
-    z-index: 1;
-    right: 0;
-    top: 0;
-    min-height: 590px !important;
-    width: 650px;
-  }
-}
-
-.volunteer_title_wrapper {
-  /*wrapper around title to center title and block out border behind*/
-  display: block;
-  margin: 0 auto;
-  background-color: #fafaff;
-  max-width: 280px;
-}
-
-.vounteer_container {
-  display: block;
-  margin: 0 auto;
-  position: relative;
-}
-
-.volunteer_flex {
-  display: flex;
-  flex-direction: row;
-  margin-top: 80px;
-}
-.volunteer_illustration {
-  padding: 0 140px 80px 140px;
-  padding: 0 140px 80px 140px;
-}
-
-.volunteer_for_us {
-  display: block;
-  margin: auto;
-  position: relative;
-  z-index: 1;
-  border: 3px solid #528fec;
-  height: fit-content;
-  width: 608px;
-}
-.current_needs_header {
-  font-family: 'Open Sans';
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 25px;
-}
-.current_needs {
-  display: flex;
-  justify-self: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  overflow-y: auto;
-  padding-left: 0;
-  width: 100%;
-  height: auto;
-}
-.position {
-  padding: 10px;
-}
-.position_link {
-  color: #528fec;
-  margin-left: 5px;
-}
-
-@media only screen and (max-width: 1064px) {
-  .main_support_us_wrapper {
-    display: block;
-    padding: 0px;
-  }
-  .support_us_wrapper {
-    padding: 0 10%;
-  }
-
-  h2.ways_to_donate_title {
-    display: block;
-    margin: auto;
-    padding-top: 40px;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 27.24px;
-  }
-
-  h2.ways_to_donate_title_volunteer {
-    margin: -35px 0 40px 0;
-    display: block;
-    padding-top: 20px;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 27.24px;
-  }
-
-  .ways_to_donate,
-  .other_ways_to_donate {
-    border: none;
-    max-width: 100%;
-    max-height: 530px;
-  }
-
-  div.ways_to_donate_flex_container {
-    display: block;
-    margin: auto;
-    flex-direction: column;
-    justify-content: space-evenly;
-  }
-
-  .donate_card {
-    display: block;
-    margin: 20px auto;
-    padding-top: 20px;
-    max-height: 246px;
-    max-width: 335px;
-  }
-
-  hr.ways_to_donate_break {
-    margin-top: 140px;
-    height: 2px;
-    margin-left: 20px;
-    margin-right: 20px;
-    background-color: rgba(82, 143, 236, 0.25);
-    border: none;
-  }
-  .other_ways_to_donate {
-    margin-top: 0px;
-  }
-
-  .facebook_fundraiser_container {
-    display: block;
-    margin: 20px auto;
-    padding-top: 0px;
-    padding-bottom: 10px;
-    max-height: 390px;
-    max-width: 335px;
-  }
-
-  .amazon_smile_container {
-    display: block;
-    margin: 20px auto;
-    padding-top: 0px;
-    padding-bottom: 10px;
-    max-height: 430px;
-    max-width: 335px;
-  }
-
-  .other_ways_to_donate_description {
-    font-weight: 600;
-    font-size: 15px;
-    text-align: left;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 0;
-  }
-  .other_instructions {
-    font-weight: 400;
-    text-align: left;
-    padding-left: 40px;
-    padding-right: 20px;
-  }
-
-  .li_instructions {
-    font-size: 14px;
-    line-height: 200%;
-  }
-
-  p.and_spacer {
-    position: relative;
-    margin-top: 390px;
-    margin-bottom: 25px;
-  }
-
-  .through_employer_flex {
-    margin: auto;
-    max-height: fit-content;
-    max-width: 335px;
-  }
-  .through_employer_icons {
-    display: block;
-    margin: auto;
-    flex-direction: column;
-    padding: 20px;
-  }
-  .your_cause_svg {
-    padding-bottom: 20px;
-  }
-
-  .through_employer_description {
-    width: 295px;
-    padding: 0px 20px 20px 20px;
-  }
-
-  hr.other_ways_to_donate_break {
-    margin: 40px 20px 20px 20px;
-  }
-
-  .volunteer_title_wrapper {
-    display: block;
-    margin: 0 auto;
-  }
-
-  .vounteer_container {
-    display: block;
-    margin: 0 auto;
-    position: relative;
-  }
-
-  .volunteer_flex {
-    display: block;
-    margin: auto;
-    flex-direction: column;
-  }
-  .volunteer_illustration {
-    padding: 20px 93px 40px 93px;
-  }
-  .volunteer_right_container {
-    display: block;
-    margin: auto;
-    height: 221px;
-    width: 335px;
-  }
-  .volunteer_for_us {
-    position: relative;
-    border: 3px solid #528fec;
-    height: fit-content;
-    width: 335px;
-  }
-}
-
-@media only screen and (max-width: 721px) {
-  .giveButterSection {
-    height: 780px;
-
-    .givebutterForm {
-      height: 100%;
-    }
-  }
-}
-@media only screen and (max-width: 441px) {
-  .giveButterSection {
-    min-height: 950px;
-    height: 100%;
-  }
-  .text_description {
-    padding-top: 0 !important;
-  }
-}
-@media only screen and (max-width: 400px) {
-  .giveButterSection {
-    min-height: 860px;
-  }
-}
-@media only screen and (max-width: 620px) {
-  .support_us_wrapper {
-    .title {
-      font-size: 18px;
-      font-weight: 700;
-    }
-    .text_description,
-    .supportSubtitle {
-      font-weight: 400;
-      font-size: 14px;
-    }
-    .text_description {
-      padding: 50px 0;
-    }
-    .supportSubtitle {
-      padding: 0 0 50px 0;
-    }
-  }
-}
-
-@media only screen and (max-width: 320px) {
-  .donate_card {
-    max-width: 300px;
-  }
-  .facebook_fundraiser_container {
-    max-width: 300px;
-  }
-
-  .amazon_smile_container {
-    max-width: 300px;
-  }
-  .li_instructions {
+  > pre {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 800;
     font-size: 12px;
-  }
-  .through_employer_flex {
-    max-width: 300px;
-  }
-
-  .through_employer_icons {
-    display: block;
-    margin: auto;
-    flex-direction: column;
-    padding: 10px;
-  }
-  .your_cause_svg {
-    padding-bottom: 20px;
-  }
-
-  .through_employer_description {
-    width: 290px;
-    height: 100px;
-    padding: 0px 20px 20px 15px;
-  }
-
-  .volunteer_illustration {
-    padding: 15px 88px 35px 88px;
-  }
-  .volunteer_right_container {
-    width: 300px;
-  }
-  .volunteer_for_us {
-    width: 300px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 1.07288e-6px;
+    background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    // text-fill-color: transparent;
+    margin: 0;
   }
 }
