--- a/styles/index.scss
+++ b/styles/index.scss
@@ -77,10 +77,10 @@ figure {
   @apply table ml-0 mr-0;
 }
 
-.wp-block-image .alignleft>figcaption,
-.wp-block-image .alignright>figcaption,
-.wp-block-image .aligncenter>figcaption,
-.wp-block-image.is-resized>figcaption {
+.wp-block-image .alignleft > figcaption,
+.wp-block-image .alignright > figcaption,
+.wp-block-image .aligncenter > figcaption,
+.wp-block-image.is-resized > figcaption {
   @apply table-caption;
 
   caption-side: bottom;
@@ -274,16 +274,6 @@ p {
 .join-bm-slider-wrapper {
   background: #fafaff;
 
-  h2 {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 35px;
-    margin-top: 26px;
-    margin-bottom: 12px;
-  }
-
   .join_bm_carousel_sec {
     margin-top: 35px;
     display: flex;
@@ -357,7 +347,7 @@ p {
   }
 
   .text-data-custom {
-    >p {
+    > p {
       display: inline-block;
       font-family: 'Open Sans';
       font-style: normal;
@@ -374,7 +364,7 @@ p {
       margin: 0;
     }
 
-    >pre {
+    > pre {
       font-family: 'Open Sans';
       font-style: normal;
       font-weight: 800;
@@ -537,41 +527,39 @@ p {
       }
     }
   }
-
-  /* Join Breathe Mongolia styles end */
-  // Our-Partners Section custom styles
-
-  .partner-logos-slider-wrapper {
-    .slick-slide {
-      padding: 0 5px;
-
-      div {
-        transition: none;
-      }
-
-      &:first-child {
-        margin-left: 0;
-        padding-left: 0;
-      }
-
-      &:last-child {
-        margin-right: 18px;
-        padding-right: 10px;
-      }
-    }
-
-    /* the parent */
-    .slick-list {
-      padding: 0 -5x;
-    }
-  }
 }
+/* Join Breathe Mongolia styles end */
+
+// Our-Partners Section custom styling
 
 .partner-logos-slider-wrapper {
   .slick-track {
     display: flex !important;
     justify-content: center;
     align-items: center;
+  }
+
+  .slick-slide {
+    padding: 0 5px;
+
+    div {
+      transition: none;
+    }
+
+    &:first-child {
+      margin-left: 0;
+      padding-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 18px;
+      padding-right: 10px;
+    }
+  }
+
+  /* the parent */
+  .slick-list {
+    padding: 0 -5x;
   }
 }
 
@@ -691,32 +679,6 @@ p {
 
 /* Our Work Carousel styles start */
 .campaign-slider-wrapper {
-  h2 {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 30px;
-    color: #2c2d41;
-    position: relative;
-  }
-
-  .horizontal-divider {
-    hr {
-      border: 0;
-      border-bottom: 2px solid #3c65ca;
-      width: 100%;
-    }
-  }
-
-  .see-more-text {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: right;
-    color: #2c2d41;
-  }
-
   .campaignCard {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px !important;
@@ -809,7 +771,6 @@ p {
 
 @media (max-width: 767px) {
   .campaign-slider-wrapper {
-
     .slick-slider,
     .slick-list,
     .slick-track,
