--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -817,11 +817,6 @@ button.read_more_btn:hover {
   flex-direction: column;
   flex-wrap: wrap;
   padding: 30px;
-  margin-bottom: 100px;
-  background-image: url('../assets/images/timeline-bg.png');
-  background-repeat: no-repeat;
-  background-position-y: 5%;
-  background-position-x: center;
 }
 .report-container {
   width: 80%;
@@ -832,6 +827,7 @@ button.read_more_btn:hover {
     font-weight: 700;
     font-size: 26px;
     text-align: start;
+    margin-bottom: 12px;
   }
   .report-grid {
     width: 100%;
@@ -847,44 +843,56 @@ button.read_more_btn:hover {
   font-family: Open Sans;
   font-style: normal;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 26px;
   line-height: 41px;
-  text-align: center;
-
-  color: #528fec;
+  margin-bottom: 30px;
+  color: rgba(44, 45, 65, 1);
 }
 
 .timeline {
   margin: 0 auto;
   position: relative;
-  width: 100%;
+  width: 960px;
+  background-image: url('../assets/images/timeline-bg.png');
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-size: 75%;
+  background-repeat-y: repeat;
+  margin-top: 50px;
+
   .accomplishment_card {
-    width: calc(50% - 20%);
+    &:first-child {
+      margin-top: -50px;
+    }
+
+    width: 390px;
     border-radius: 10px;
     position: relative;
-
-    padding: 20px;
+    margin-bottom: 50px;
     font-size: 15px;
     line-height: 25px;
+    margin-top: -60px;
 
     .accomplishment_image_card {
       width: 100%;
-      max-width: 400px;
-      height: auto;
+      max-width: 390px;
+      height: 240px;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
       border-radius: 20px;
+      object-fit: cover;
     }
 
     .accomplishment_content_card {
       width: 450px;
       height: auto;
+      min-height: 250px;
       position: absolute;
       background: rgba(255, 255, 255, 0.85);
       box-shadow: 0px 4px 20px rgba(138, 138, 138, 0.15);
       backdrop-filter: blur(4px);
       border-radius: 20px;
-      left: 170px;
-      top: 145px;
+      left: 50px;
+      top: 50px;
       padding: 20px;
 
       .title {
@@ -896,6 +904,7 @@ button.read_more_btn:hover {
         font-size: 20px;
         line-height: 27px;
         margin: 0px;
+        margin-bottom: 10px;
         color: #000000;
       }
 
@@ -903,8 +912,8 @@ button.read_more_btn:hover {
         font-family: Open Sans;
         font-style: normal;
         font-weight: normal;
-        font-size: 16px;
-        line-height: 150%;
+        font-size: 14px;
+        line-height: 21px;
         /* or 21px */
         text-align: start;
         color: #2c2d41;
@@ -916,7 +925,7 @@ button.read_more_btn:hover {
       margin-left: auto;
 
       .accomplishment_content_card {
-        left: -290px;
+        left: -50px;
       }
     }
   }
@@ -978,6 +987,15 @@ button.read_more_btn:hover {
   .timeline {
     margin: 0 auto;
     width: 375px;
+    background: none;
+
+    .accomplishment_card {
+      margin-bottom: 200px;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
 
     .accomplishment_card_mobile {
       display: flex;
@@ -1096,7 +1114,7 @@ button.read_more_btn:hover {
 /* SUPPORT US SECTION STYLING */
 
 .text-data-custom {
-  > p {
+  & > p {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 800;
