--- a/styles/index.scss
+++ b/styles/index.scss
@@ -271,266 +271,49 @@ p {
 }
 
 /* Join Breathe Mongolia styles start */
-.join-bm-slider-wrapper {
-  background: #fafaff;
 
-  .join_bm_carousel_sec {
-    margin-top: 35px;
-    display: flex;
-    gap: 10px;
-  }
-
-  .membersPhoto {
-    width: 62%;
-  }
-
-  .country_count_col:not(:nth-of-type(3)) {
-    padding-right: 40px;
-  }
-
-  .slick-dots li button:before {
-    content: '';
-    width: 12px;
-    height: 12px;
-    background: #ffffff;
-    border: 1px solid #646464;
-    border-radius: 100%;
-    opacity: 1 !important;
-  }
-
-  .slick-dots li.slick-active button:before {
-    background: #646464;
-  }
-
-  .slick-arrow {
-    top: 35% !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .join_bm_desc {
-    p {
-      font-family: 'Open Sans';
-      font-style: normal;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 150%;
-      color: #524d42;
-      margin: 0;
-    }
-  }
-
-  .slider-image {
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    height: 350px;
-    outline: none;
-  }
-
-  .volunteer-count {
-    margin: auto;
-    width: fit-content;
-  }
-
-  .volunteer-count-section {
-    justify-content: center;
-    align-items: flex-start !important;
-    width: 340px;
-  }
-
-  .flex-row {
-    display: flex !important;
-    flex-wrap: wrap !important;
-    align-items: center;
-  }
-
-  .text-data-custom {
-    > p {
-      display: inline-block;
-      font-family: 'Open Sans';
-      font-style: normal;
-      font-weight: 800;
-      font-size: 38px;
-      line-height: 52px;
-      text-align: center;
-      letter-spacing: 1.07288e-6px;
-      background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      // text-fill-color: transparent;
-      margin: 0;
-    }
-
-    > pre {
-      font-family: 'Open Sans';
-      font-style: normal;
-      font-weight: 800;
-      font-size: 12px;
-      line-height: 16px;
-      text-align: center;
-      letter-spacing: 1.07288e-6px;
-      background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      // text-fill-color: transparent;
-      margin: 0;
-    }
-  }
-
-  .opportunity-section {
-    margin-top: 30px;
-
-    .title {
-      font-family: 'Open Sans';
-      font-style: normal;
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 150%;
-      color: #2c2d41;
-      margin-top: 0 !important;
-      margin-bottom: 8px;
-    }
-
-    .position-list {
-      padding-left: 20px;
-      list-style-type: disc;
-      color: black;
-    }
-
-    .pos_link_url {
-      font-family: 'Open Sans';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      color: #2c2d41;
-      transition: all 0.3s ease;
-
-      &:hover {
-        color: #3174d0;
-      }
-    }
-
-    .apply_now_button {
-      margin-top: 10px;
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      height: 30px;
-      width: 116px;
-      max-width: 116px;
-      padding: 0;
-      background: #f4ac3d;
-      border-radius: 8px;
-      text-transform: uppercase;
-      color: #ffffff;
-      font-style: normal;
-      font-weight: 800;
-      font-size: 12px;
-      line-height: 14px;
-      text-align: center;
-      letter-spacing: normal;
-
-      &:hover {
-        background: #61b1ee;
-      }
-    }
-  }
-
-  .country-text {
-    img {
-      width: 20px;
-      height: 20px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
+.slider-image {
+  width: fit-content;
+  height: 350px;
+  outline: none;
 }
 
-@media (max-width: 1064px) {
-  .join-bm-slider-wrapper .volunteer-count {
-    padding-left: 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .join-bm-slider-wrapper {
-    .volunteer-count {
-      margin: auto;
-      width: 90% !important;
-      flex-direction: column;
-
-      .volunteer-count-section {
-        width: 350px;
-        flex-wrap: nowrap !important;
-      }
-
-      .opportunity-section {
-        width: 350px;
-      }
-    }
+// Volunteer Statistics Design
+.text-data-custom {
+  > p {
+    display: inline-block;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 38px;
+    line-height: 52px;
+    text-align: center;
+    letter-spacing: 1.07288e-6px;
+    background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin: 0;
   }
 
-  .banner-slider-wrapper {
-    padding-top: 0;
-  }
-
-  .news-carousel-section {
-    .slick-slide {
-      div {
-        width: 330px;
-      }
-    }
-  }
-}
-
-@media (max-width: 950px) {
-  .join-bm-slider-wrapper {
-    .join_bm_desc {
-      p {
-        font-weight: 400;
-        font-size: 15px;
-      }
-    }
-
-    .join_bm_carousel_sec {
-      flex-direction: column;
-      gap: 60px;
-    }
-
-    .membersPhoto {
-      display: none;
-      width: 85%;
-      margin: 0 auto;
-    }
-
-    .slider-image {
-      object-position: top center;
-      margin: 0 auto;
-    }
-
-    .volunteer-count {
-      display: flex;
-      width: 75%;
-      gap: 40px;
-      margin: 0 auto;
-    }
-
-    .opportunity-section {
-      margin-top: 0px;
-
-      .title {
-        padding-top: 0;
-      }
-    }
+  > pre {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 1.07288e-6px;
+    background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin: 0;
   }
 }
 /* Join Breathe Mongolia styles end */
 
-// Our-Partners Section custom styling
+// Our Partners Section custom styling
 
 .partner-logos-slider-wrapper {
   .slick-track {
