--- a/styles/our-mission.scss
+++ b/styles/our-mission.scss
@@ -1,4 +1,4 @@
-/* Our Mission */
+/* Our Mission Background */
 
 .our_mission_container {
   width: 100%;
@@ -38,10 +38,8 @@
 .what_we_do_container {
   color: white;
   background: rgba(44, 45, 65, 1);
-  height: 490px;
+  height: 440px;
   position: relative;
-  padding-top: 20px;
-  margin-top: 40px;
   text-align: center;
 
   &::after {
@@ -58,7 +56,6 @@
   .what_we_do_title {
     font-family: Open Sans;
     font-weight: bold;
-    font-size: 32px;
     line-height: 41px;
   }
 
@@ -115,13 +112,13 @@
 
   .our_mission_background {
     width: 100%;
-    height: 220px;
+    height: 250px;
   }
 
   .mission_vision_wrapper {
     position: absolute;
     display: block;
-    top: -10%;
+    top: 5%;
     left: 12%;
     right: 12%;
     text-align: center;
