--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -544,7 +544,7 @@ img.map_img {
 
 /* OUR STORY SECTION STYLING*/
 
-div.our_stories_container {
+.our_stories_container {
   display: flex;
   flex-direction: row;
   background: #528fec;
@@ -555,24 +555,17 @@ div.our_stories_container {
 .left_container {
   flex: 1 1 0;
   color: #ffffff;
-  justify-content: space-evenly;
-  margin-left: 100px;
 }
 
 h1.our_stories_title {
   margin-top: 40px;
   text-align: left;
   font-weight: bold;
-  // font-style: normal;
-  font-size: 28px;
-  // line-height: 40px;
   margin-bottom: 20px;
 }
 
 p.our_stories_content {
-  font-size: 16px;
   font-style: normal;
-  line-height: 24px;
   text-align: left;
   padding: 0;
 }
@@ -595,13 +588,9 @@ button.btn:hover {
 .btn_text {
   text-transform: uppercase;
   color: #ffffff;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 20.43px;
   font-weight: 700;
-}
-
-.btn_text.mobile {
-  display: none;
 }
 
 a {
@@ -640,10 +629,8 @@ img.our_stories_img {
 
 h1.air_pollution_title {
   font-size: 28px;
-  // font-style: normal;
   font-weight: bold;
   color: #528fec;
-  // line-height: 40px;
   text-align: center;
   margin: 40px;
 }
@@ -699,7 +686,7 @@ button.read_more_btn:hover {
 /*MOBILE SIZING for OUR STORY SECTION*/
 
 @media only screen and (min-width: 320px) and (max-width: 790px) {
-  div.our_stories_container {
+  .our_stories_container {
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
@@ -723,10 +710,8 @@ button.read_more_btn:hover {
 
   h1.our_stories_title {
     text-align: center;
-    text-transform: uppercase;
     font-weight: bold;
-    font-size: 18px;
-    // margin-top: 20px;
+    margin-top: 0px;
   }
 
   button.btn {
@@ -741,18 +726,9 @@ button.read_more_btn:hover {
   }
 
   .btn_text {
-    text-transform: uppercase;
     color: #ffffff;
     font-size: 14px;
     font-weight: bold;
-  }
-
-  .btn_text.mobile {
-    display: contents;
-  }
-
-  .btn_text.desktop {
-    display: none;
   }
 }
 
@@ -784,11 +760,6 @@ button.read_more_btn:hover {
     height: 250px;
     max-height: 250px;
     width: 330px;
-  }
-
-  .mobile-display {
-    /*changes button text from 'read more stories' to 'read more'*/
-    display: none;
   }
 }
 
